# relectro

./: .gitignore  DESCRIPTION  NAMESPACE  README  README.md  configure  configure.ac  linear.R  main.R
R/: CalendarHeatmap.R  CellGroup.R  Clustering.R  DatFiles.R  ElectroProject.R  HeadDirection.R  JoinIntervals.R  KiloSort.R  Math.R  Plots.R  PlotsGeneric.R  PlotsSpatial.R  Positrack.R  RecSession.R  SignalProcessing.R  SpatialProperties1d.R  SpatialProperties2d.R  SpikeExtraction.R  SpikeTrain.R  SpikeWaveform.R  TdatFiles.R  Ttl.R  databaseDirectories.R  whdFromPositrack.R  whlFromPositrack.R
man/: CellGroup-class.Rd  DatFiles-class.Rd  ElectroProject-class.Rd  HeadDirection-class.Rd  Mode.Rd  Positrack-class.Rd  RecSession-class.Rd  RecSessionListTrialPlot.Rd  SpatialProperties1d-class.Rd  SpatialProperties2d-class.Rd  SpikeTrain-class.Rd  SpikeTrain.Rd  SpikeTrain.Rd~  SpikeWaveform-class.Rd  animalNameFromSessionName.Rd  autocorrelationDoughnut-methods.Rd  autocorrelationDoughnutRotate-methods.Rd  autocorrelationNoFields-methods.Rd  autocorrelation_cwrap.Rd  bandPassFilter.Rd  borderDetection-methods.Rd  borderScore-methods.Rd  boxplotTwoFactors.Rd  brainRegionFromCluNo-methods.Rd  centerOfMass.Rd  checkIntegrityPositrackData.Rd  checkIntegrityUp.Rd  cluNoFromCluId.Rd  clusterIsolationCheck.Rd  colorScalePlot.Rd  containsElectrodeLocation-methods.Rd  containsEnvironment-methods.Rd  containsStimulation-methods.Rd  copyDatabase-methods.Rd  copyRecSessionFiles-methods.Rd  cor.diff.Rd  createSpkFile.Rd  crossRefractoryRatio-methods.Rd  datFilesGetChannels-methods.Rd  (+156 more)
(+50 files in other folders)
